--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <img src="images/closed_list_element.gif" class="list-ele" />
           <span class="header">ABOUT</span>
           <div class="visible-drawer drawer-content">
-          	Distributed Global is an asset management company exclusively focused on delivering returns to investors through our innovative investment approach to digital and blockchain-based assets.  
+          	Distributed Global is a venture firm focused on the blockchain ecosystem. Our diverse industry experience, team, reputation in the crypto community, and multi-decade perpective enable us to guide founders creating the foundational platforms of the future. 
           </div>
         </li>
         <li class="drawer">
