--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <img src="images/closed_list_element.gif" class="list-ele" />
           <span class="header">CONTACT</span>
           <div class="visible-drawer drawer-content">
-		  <span><a href="mailto:info@distributedglobal.com">info@distributeglobal.com</a></span>
+		  <span><a href="mailto:info@distributedglobal.com">info@distributedglobal.com</a></span>
 	    <!--
 	    <span><a href="/cdn-cgi/l/email-protection#ff8f8dbf8b978d96899a9c9e8fd19c9092" target="_top"><span class="__cf_email__" data-cfemail="205052605448524956454341500e434f4d">[email&#160;protected]</span></a> - Media and comment requests</span>-->
             
@@ -183,6 +183,6 @@
       </ul>
       
     </div>
-      <img id="small_logo" src="images/logo_small.png" />
+      <!-- <img id="small_logo" src="images/logo_small.png" />-->
   <script type="text/javascript">/* <![CDATA[ */(function(d,s,a,i,j,r,l,m,t){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script></body>
 </html>
