--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <img src="images/closed_list_element.gif" class="list-ele" />
           <span class="header">ABOUT</span>
           <div class="hidden-drawer drawer-content">
-          	Distributed Global is a venture firm focused on the blockchain ecosystem. Our diverse industry experience, team, reputation in the crypto community, and multi-decade perpective enable us to guide founders creating the foundational platforms of the future. 
+          	Distributed Global is an investment firm focused on the blockchain and digital asset ecosystem. 
           </div>
         </li>
         <li class="drawer">
