--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <img src="images/closed_list_element.gif" class="list-ele" />
           <span class="header">CONTACT</span>
           <div class="visible-drawer drawer-content">
-		  <span><a href="mailto:info@distributedglobal.com">info@distributeglobal.com</a></span>
+		  <span><a href="mailto:info@distributedglobal.com">info@distributedglobal.com</a></span>
 	    <!--
 	    <span><a href="/cdn-cgi/l/email-protection#ff8f8dbf8b978d96899a9c9e8fd19c9092" target="_top"><span class="__cf_email__" data-cfemail="205052605448524956454341500e434f4d">[email&#160;protected]</span></a> - Media and comment requests</span>-->
             
