--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <img src="images/closed_list_element.gif" class="list-ele" />
           <span class="header">ABOUT</span>
           <div class="hidden-drawer drawer-content">
-          	Distributed Global is an investment firm focused on the blockchain and digital asset ecosystem. 
+          	Distributed Global is an investment firm. 
           </div>
         </li>
         <li class="drawer">
